[package]
name = "dfm"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3"
clap = "3.0.0-beta.5"
directories = "4.0"
futures = "0.3"
terminal_size = "0.1"
tokio = { version = "1.10", features = ["fs", "macros", "process", "rt-multi-thread"] }
xdg = "2.2"
