[package]
name = "dfm"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dist]
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
colored = "2.0.0"
directories = "4.0.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
terminal_size = "0.2.5"
xdg = "2.4.1"
